--- a/tabla_genes.ipynb
+++ b/tabla_genes.ipynb
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "partefasta 10000 acacia.faa"
+    "partefasta 10000 acacia90.faa"
    ]
   },
   {
