corregir acacia90.fas a acacia90.faa
se corrigieron los nombres de los archivos de entrada de diamond para mantener consistencia

--- a/tabla_genes.ipynb
+++ b/tabla_genes.ipynb
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diamond blastp -d m5nr -q acacia90.fas.1.fas -f 6 -e 1e-10 -k 10 -p 1 --quiet -o acacia90.fas.1.fas.bout"
+    "diamond blastp -d m5nr -q acacia90.faa.1.fas -f 6 -e 1e-10 -k 10 -p 1 --quiet -o acacia90.faa.1.fas.bout"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat acacia90.fa*.bout > acacia-m5nr.bout"
+    "cat acacia90.faa.*.bout > acacia-m5nr.bout"
    ]
   },
   {
