--- a/tabla_genes.ipynb
+++ b/tabla_genes.ipynb
@@ -8,9 +8,11 @@
     "\n",
     "Archivos iniciales:\n",
     "\n",
-    "*acacia.faa* contiene secuencias de aminoácidos renombradas.\n",
+    "*acacia.faa* contiene secuencias de aminoácidos renombradas. \n",
+    "(Los nombres de las secuencias deben tener el nombre de la muestra como prefijo y el número de secuencia como sufijo)\n",
     "\n",
     "*acacia.fna* contiene secuencias de nucleótidos de los marcos de lectura renombradas.\n",
+    "(Los nombres de las secuencias deben tener el nombre de la muestra como prefijo y el número de secuencia como sufijo y las secuencias deben corresponder con las del archivo de aminoácidos)\n",
     "\n",
     "*acacia-rn.fasta* contiene secuencias de lecturas de calidad tanto pareadas como sin parear.\n",
     "\n",
@@ -182,6 +184,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Construir tablas\n",
+    "\n",
+    "#### Importante: Para utilizar los scripts que generan las tablas de abundancias (hitter.py, hitter_table.py y hitter_na.py) es imprescindible que los nombres de las secuencias tengan como prefijo el nombre de la muestra (y como sufijo el número de la secuencia) y que los archivos de secuencias mapeadas tengan el nombre de la muestra. Los nombres de las muestras deben ser consistentes  y no deben contener guiones bajos.\n",
+    "\n",
+    "Por ejemplo, el archivo *acacia.hits* debe verse así:\n",
+    "\n",
+    "```\n",
+    "      1 acacia_10\n",
+    "      2 acacia_100\n",
+    "     15 acacia_10000\n",
+    "     72 acacia_100000\n",
+    "    116 acacia_100001\n",
+    "    121 acacia_100002\n",
+    "     61 acacia_100003\n",
+    "     18 acacia_100004\n",
+    "    147 acacia_100005\n",
+    "      4 acacia_100006 \n",
+    "```\n",
+    "\n",
+    "\n",
     "Generar una tabla que contenga cada identificador del m5nr y su abundancia según las lecturas mapeadas a los marcos de lectura, sumada por las secuencias en cada cluster. Se usa el script hitter.py y se obtiene el archivo *acacia.hout*"
    ]
   },
